[tool.poetry]
name = "Auto form filler"
authors = ["Peter Kaplinsky (peter.kaplinsky@gmail.com)"]
version = "0.1.0"
description = "A tool to auto fill offer forms for NBMC"

[tool.poetry.dependencies]
python = ">=3.11.4,<3.13"
isort = "^5.12.0"
flake8 = "^6.1"
black = "^22.10.0"
PyPDF2 = "^3.0.1"
reportlab = "4.0.5"
pyinstaller = "^6.1.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
